--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <div class="col-md-4">
             <div class="withdraw status">
                 <h5>Withdraw</h5>
-                <h2>$00</h2>
+                <h2>$<span id="currentWithdraw">00</span></h2>
             </div>
         </div>
         <div class="col-md-4">
@@ -81,14 +81,19 @@
 
             updateSpanText("currentBalance", depositNumber);
 
-            document.getElementById("depositAmount").value= "";
+            document.getElementById("depositAmount").value = "";
 
        })
         //withdraw button event handler
         const withdrawBtn = document.getElementById("addwithdraw");
         withdrawBtn.addEventListener("click", function(){
             const withdrawNumber = getInputNumber("withdrawAmount")
-            console.log(withdrawNumber);
+
+           updateSpanText("currentWithdraw", withdrawNumber);
+
+           updateSpanText("currentBalance", -1*withdrawNumber);
+
+           document.getElementById("withdrawAmount").value = "";
         })
 
         function getInputNumber (id){
